# cosmic-iio

./: .gitignore  Cargo.toml  LICENSE  README.md  cosmic-iio.service  justfile
.github/workflows/: ci.yml
src/: main.rs
src/core/: accelerometer.rs  mod.rs  randr.rs  transform.rs
