[package]
name = "cosmic-iio"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dependencies]
dbus = "0.9.7"
signal-hook = "0.3.17"

# TODO: Consider using libcosmic to make applet of this maybe?
# libcosmic = { git = "https://github.com/pop-os/libcosmic" }
wayland-client = "0.31.7"
cosmic-randr = { git = "https://github.com/pop-os/cosmic-randr" }
tachyonix = "0.3.1"
